# terminator

./: .gitignore  BUILD_INSTRUCTIONS.md  Cargo.toml  DEVELOPMENT_PLAN.md  GUIDA_UTENTE.md  README_SISTEMA_LICENZE.md  google_test.js  package-lock.json  package.json  test.js
.emergent/: emergent.yml
examples/python-automation/: excel_to_windows_app.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Button.jsx  Card.jsx  Input.jsx  Modal.jsx  Toast.jsx
frontend/src/contexts/: WorkflowContext.jsx
frontend/src/pages/: ActivateLicense.jsx  Dashboard.jsx  ExecuteWorkflow.jsx  LicenseManagement.jsx  RecordWorkflow.jsx  WorkflowDetails.jsx
frontend/src/services/: tauriApi.js
license-generator/: Cargo.toml  README.md
license-generator/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: license.rs  main.rs
workflow-automator/: Cargo.toml  GUIDA_CLIENTE.md  README.md  build.ps1  esempio_dati.csv
workflow-automator/src/: main.rs
