[package]
name = "workflow-automator"
version = "1.0.0"
edition = "2021"
description = "Automazione workflow per clienti - standalone executable"

[[bin]]
name = "workflow-automator"
path = "src/main.rs"

[dependencies]
# Core dependencies
terminator-rs = { path = "../terminator" }
terminator-workflow-recorder = { path = "../terminator-workflow-recorder" }
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

# Excel reading
calamine = "0.26"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# GUI (optional - per interfaccia grafica)
# eframe = "0.29"  # Uncomment for GUI

[profile.release]
opt-level = "z"     # Ottimizza per dimensione
lto = true          # Link Time Optimization
codegen-units = 1   # Migliore ottimizzazione
strip = true        # Rimuovi simboli debug
panic = "abort"     # Riduce dimensione
